Fix form textbox spacing

--- a/static/styles.css
+++ b/static/styles.css
@@ -207,8 +207,9 @@ a {
     font-weight: var(--h1-weight);
     font-size: var(--h2-size);
     height: auto;
-    width: 50%;
-    margin-bottom: 20px;
+    width: 90%;
+    max-width: 50vw;
+    margin-bottom: 25px;
     border-radius: var(--input-curve);
     padding: 10px 20px;
     box-shadow: var(--sm-shadow);
@@ -236,12 +237,13 @@ a {
     border-radius: var(--button-curve);
     padding: 15px 45px;
     border: hidden;
-    transition: padding .5s;
+    transition: width .5s;
+    width: 50%;
 }
 
 .button:hover {
     cursor: pointer;
-    padding: 15px 55px
+    width: 60%;
 }
 
 .flashes {
